--- a/css/wedding.css
+++ b/css/wedding.css
@@ -19,6 +19,59 @@ html {
   padding-bottom: 30px;
 }
 
+/* :root {
+  --orange: #f4a261;
+  --dark-orange: #e76f51;
+  --leaf-green: #2a9d8f;
+  --darker-color: #264653;
+  --dark-color: #3e734c;
+  --light-color: #d6eec4;
+  --background: #fefae0;
+} */
+
+:root {
+  --orange: #f4a261;
+  --dark-orange: #C17C42;
+  --darker-color: #6E8B3D;
+  --dark-color: #6E8B3D;
+  --light-color: #A7C17C;
+  --lighter-color: #D4E7B0;
+  --background: #fefae0;
+  --green-light: #A7C17C; /* Soft olive green */
+  --green-medium: #6E8B3D; /* Vibrant leafy green */
+  --green-dark: #3D5C2B; /* Deep forest green */
+  --light-orange: #E3B27D; /* Warm sandy orange */
+  --orange-dark: #C17C42; /* Earthy burnt orange */
+}
+.dusty-pink {color: #D8A9A8}
+.dusty-pink-lighter {color: #EDD2D1}
+.dusty-pink-lightest {color: #F4E2E2}
+.dusty-pink-darker {color: #BC8887}
+.dusty-pink-darkest {color: #996E6D}
+.earthy-brown { color: #4F3927; }
+.olive-green { color: #97A451; }
+.soft-beige { color: #D7C7A2; }
+.forest-green { color: #5D6E2B; }
+.dusty-pink { color: #C39795; }
+.warm-cream { color: #E3D7C4; }
+
+
+.first-color {
+	background: ;
+}
+
+.second-color {
+	background:
+}
+
+.third-color {
+	background: #dce775;
+}
+
+.fourth-color {
+	background: #fff59d;
+}#fff59d
+
 .navbar-item {
   line-height: 38px;
   font-weight: 600;
@@ -29,15 +82,15 @@ html {
 }
 
 .navbar-item.is-active{
-  border-bottom: 2px solid #996E6D;
+  border-bottom: 2px solid #f4a261;
 }
 
 .a.navbar-item{
-  font-color: #996E6D;
+  color: var(--dark-color);
 }
 
-
-.hero {
+/*
+ .hero {
   background-image: url(https://picsum.photos/id/25/1920/1080);
   background: linear-gradient(rgba(153, 110, 109, 0.65), rgba(153, 110, 109, 0.65)), rgba(0, 0, 0, 0.55) url("https://picsum.photos/id/381/1920/1080") no-repeat;
   background-attachment: fixed;
@@ -45,8 +98,17 @@ html {
   color: white;
   box-shadow: inset 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   font-family: 'Raleway', sans-serif;
-}
+}  */
 
+.hero {
+  background: linear-gradient(#6E8B3D, #f4a261a6),
+              rgba(0, 0, 0, 0.55) url("../image/cantruy2.jpg") no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  color: white;
+  box-shadow: inset 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  font-family: 'Raleway', sans-serif;
+}
 
 
 .hero .title {
@@ -67,12 +129,12 @@ html {
 .hero .tempatwaktu {
   padding-top: 35px;
   font-size: 1.3rem;
-  
+
 }
 
 .hero .hero-foot {
   height: 50px;
-  background: white;
+  background: hsl(0, 0%, 100%);
   box-shadow: 0 2px 15px rgba(0, 0, 0, 0.082);
 }
 
@@ -102,17 +164,20 @@ html {
 }
 
 .hero .hero-foot .hero-foot--wrapper .hero-menu-desktop ul li.is-active a {
-  border-bottom: 2px solid #996E6D;
+  border-bottom: 2px solid var(--light-orange);
 }
 
 .hero .hero-foot .hero-foot--wrapper .hero-menu-desktop ul li a {
-  color: #996E6D;
+  /* color: #996E6D; */
+  color: var(--dark-orange);
 }
 
 .hero .hero-foot .hero-foot--wrapper .hero-menu-desktop ul li a:hover {
-  color: #996E6D;
+  color: var(--dark-orange);
+  /* color: #996E6D; */
   transition: all .2s ease-in-out;
-  border-bottom: 2px solid #c28285;
+  /* border-bottom: 2px solid #c28285; */
+  border-bottom: 2px solid var(--light-orange);
 }
 
 
@@ -126,17 +191,18 @@ html {
 
 .main-content {
   padding-top: 2rem;
-  color: #000; 
+  color: #000;
   font-family: 'Raleway', sans-serif;
 }
 
 .main-content .section-dark {
-  background-color: #F4E2E2;
+  /* background-color: #F4E2E2; */
+  background-color: var(--lighter-color);
   padding: 80px 40px;
 }
 
 .main-content .section-darker {
-  background-color: #EDD2D1;
+  background-color: var(--light-color);
   padding: 80px 40px;
 }
 
@@ -176,7 +242,7 @@ html {
 
 .main-content .section-cashbac {
   background-color: rgb(238, 250, 253);
-  padding: 80px 40px; 
+  padding: 80px 40px;
 }
 
 @media (max-width: 599px) {
@@ -290,7 +356,7 @@ html {
 .main-content .section-title {
   font-family: 'Raleway', sans-serif;
   font-weight: 900;
-  color: #996E6D;
+  color: var(--dark-orange);
   text-transform: uppercase;
   font-size: 1.5rem;
   letter-spacing: 0px;
@@ -299,7 +365,7 @@ html {
 
 .nama-lengkap {
   font-family: 'Rouge Script', sans-serif;
-  color: #996E6D;
+  color: var(--dark-orange);
   font-size: 3.5rem;
   letter-spacing: 0px;
   padding-bottom: 6px;
@@ -309,7 +375,7 @@ html {
 .ampersand {
 font-size: 5rem;
 font-family: 'Rouge Script', sans-serif;
-color: #996E6D;
+color: var(--dark-orange);
 line-height: 5rem;
 display: inline-block;
 vertical-align: middle;
@@ -319,7 +385,7 @@ vertical-align: middle;
   font-size: 18px;
 }
 
-.waktu {
+.fecha {
   font-size: 1.4rem;
   font-family: 'Raleway', sans-serif;
 }
@@ -350,8 +416,8 @@ vertical-align: middle;
   line-height: 25px;
   text-align: center;
   vertical-align: middle;
-  background: #c28285;
-  color: whitesmoke;    
+  background: var(--darker-color);
+  color: whitesmoke;
 }
 
 .footer p {
@@ -383,16 +449,9 @@ vertical-align: middle;
 }
 
 .divider {
-  margin: 40px 25px;
+  /* margin: 40px 25px; */
   display: inline-block;
-  max-height: 60px;
-  vertical-align: middle;
-}
-
-.bismillah {
-  margin: 25px;
-  display: inline-block;
-  max-height: 50px;
+  /* max-height: 60px; */
   vertical-align: middle;
 }
 
@@ -440,7 +499,8 @@ body.preloader-site {
 .preloader-wrapper {
   height: 100%;
   width: 100%;
-  background: #D8A9A8;
+  background: var(--dark-color);
+  /* background: #D8A9A8; */
   position: fixed;
   top: 0;
   left: 0;
@@ -459,10 +519,10 @@ body.preloader-site {
 
 .btn-whatsapp:hover {
   color: white;
-  background-color: #59a543;
+  background-color: var(--orange);
   font-size: 1.2rem;
   border-radius: 10px;
-  border: 2px solid #59a543;
+  border: 2px solid var(--dark-orange);
   width:  210px;
   height: 65px;
   align-items: center;
@@ -471,16 +531,16 @@ body.preloader-site {
 
 
 .btn-whatsapp {
-  background-color: #6cc751;
+  background-color: var(--dark-orange);
   width:  210px;
   height: 65px;
   color: white;
   font-size: 1.2rem;
-  border-radius: 10px;  
-  border-left: 1px solid #6cc751;
-  border-right: 1px solid #6cc751;
-  border-top: 1px solid #6cc751;
-  border-bottom: 1px solid #6cc751;
+  border-radius: 10px;
+  border-left: 1px solid var(--dark-orange);
+  border-right: 1px solid var(--dark-orange);
+  border-top: 1px solid var(--dark-orange);
+  border-bottom: 1px solid var(--dark-orange);
   align-items: center;
   margin: 1rem;
 
@@ -489,10 +549,10 @@ body.preloader-site {
 
 .btn-cta:hover {
   color:white;
-  background-color: #bf7877;
+  background-color: var(--dark-orange);
   font-size: 1.2rem;
   border-radius: 10px;
-  border: 2px solid #bf7877;
+  border: 2px solid var(--dark-orange);
   width:  210px;
   height: 65px;
   align-items: center;
@@ -500,12 +560,12 @@ body.preloader-site {
 }
 
 .btn-cta {
-  background-color: #996E6D;
+  background-color: var(--dark-orange);
   width:  210px;
   height: 65px;
   color: white;
   font-size: 1.2rem;
-  border: 2px solid #996E6D;
+  border: 2px solid var(--dark-orange);
   border-radius: 10px;
   align-items: center;
   margin: 1rem;
@@ -553,66 +613,10 @@ body.preloader-site {
 {color:ghostwhite}
 
 
-.dusty-pink {color: #D8A9A8}
-.dusty-pink-lighter {color: #EDD2D1}
-.dusty-pink-lightest {color: #F4E2E2}
-.dusty-pink-darker {color: #BC8887}
-.dusty-pink-darkest {color: #996E6D}
-
 .tile {
   border-radius: 10px;
 }
 
-
-.foto1 {
-  background-image: linear-gradient(rgba(95, 2, 2, 0.5), rgba(48, 47, 47, 0.9)), url("../image/sherly-daeng-kang-emil.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat:no-repeat;
-  min-height: 24rem;
-}
-
-
-.foto2 {
-  background-image: linear-gradient(rgba(95, 2, 2, 0.5), rgba(48, 47, 47, 0.9)), url("../image/sherly-daeng-cashbac.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat:no-repeat;
-  min-height: 24rem;
-}
-
-.foto3 {
-  background-image: linear-gradient(rgba(95, 2, 2, 0.5), rgba(48, 47, 47, 0.9)), url("../image/sherly-daeng-selfie.jpg");
-  background-size: cover;
-  background-position: top;
-  background-repeat:no-repeat;
-  min-height: 24rem;
-}
-
-.foto4 {
-  background-image: linear-gradient(rgba(95, 2, 2, 0.5), rgba(48, 47, 47, 0.9)), url("../image/sherly-daeng-lamaran.jpg");
-  background-size: cover;
-  background-position: top;
-  background-repeat:no-repeat;
-  min-height: 24rem;
-}
-
-.foto5 {
-  background-image: linear-gradient(rgba(95, 2, 2, 0.5), rgba(48, 47, 47, 0.9)), url("../image/sherly-daeng-red-car.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat:no-repeat;
-  min-height: 24rem;
-}
-
-
-.foto6 {
-  background-image: linear-gradient(rgba(95, 2, 2, 0.5), rgba(48, 47, 47, 0.9)), url("../image/sherly-daeng-engagement-ami.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat:no-repeat;
-  min-height: 24rem;
-}
 
 
 
@@ -634,13 +638,13 @@ body.preloader-site {
   text-align: left;
   color: white;
 }
-
+/*
 .section-light {
-  background-image: url(../image/divider-flowers-leaves.png);
-  background-position: bottom -30px center;
+  background-image: url(../image/naranjo_rama.png);
+  background-position: bottom -0px center;
   background-repeat: no-repeat;
   background-size: initial;
-}
+} */
 
 .instagram {
   color: #996E6D;
