--- a/css/wedding.css
+++ b/css/wedding.css
@@ -70,13 +70,12 @@ html {
 }
 
 .hero {
-  background: linear-gradient(hsla(331, 30%, 74%, 0.9), hsla(27, 77%, 51%, 0.6)), rgba(0, 0, 0, 0.55) url("../image/esvedra.jpg") no-repeat center top;
-  background-attachment: fixed;
+  background: linear-gradient(
+    hsla(331, 30%, 74%, 0.9),
+    hsla(27, 77%, 51%, 0.6)),
+    url("../image/esvedra_marina_recorte.jpg") no-repeat center center;
+  background-attachment: relative;
   background-size: cover;
-  background-position: center;
-  color: white;
-  box-shadow: inset 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-  font-family: 'Raleway', sans-serif;
 }
 
 @font-face {
