--- a/css/wedding.css
+++ b/css/wedding.css
@@ -643,11 +643,24 @@ body.preloader-site {
   cursor: pointer;
   border-radius: 50%;
   font-size: 2rem;
-  box-shadow: 0 0px 0px rgba(14, 25, 80, 0.3);
+  box-shadow: 0 4px 8px rgba(14, 25, 80, 0.3);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  line-height: 1;
 }
 
 #toTop a {
   color: white;
+  text-decoration: none;
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #toTop:hover {
