Set hero relative for mobile devices

--- a/css/wedding.css
+++ b/css/wedding.css
@@ -73,9 +73,8 @@ html {
   background: linear-gradient(
     hsla(331, 30%, 74%, 0.9),
     hsla(27, 77%, 51%, 0.6)),
-    url("../image/esvedra_marina_recorte.jpg") no-repeat center center;
-  background-attachment: fixed;
-  z-index: -10;
+    url("../image/esvedra.jpg") no-repeat center center;
+  background-attachment: relative;
   background-size: cover;
 }
 
