--- a/css/timeline.css
+++ b/css/timeline.css
@@ -74,6 +74,7 @@
 .timeline__item-hours {
     display: inline-flex;
     text-align: right;
+    font-weight: ;
     padding: 0 5px 4px 0
 }
 .timeline__item-minutes {
@@ -142,9 +143,10 @@
 .timeline__item-event,
 .bp3-editable-text,
 .bp3-editable-text-content {
-  color: var(--dark-orange);
-  border-color: var(--dark-orange); /* if you want borders colored too */
-  fill: var(--dark-orange); /* for SVG or icons */
+    color: var(--dark-orange);
+    font-weight: 300;
+    border-color: var(--dark-orange); /* if you want borders colored too */
+    fill: var(--dark-orange); /* for SVG or icons */
 }
 
 .timeline__item-icon img {
