Test webkit for fixed backtround

--- a/css/wedding.css
+++ b/css/wedding.css
@@ -14,7 +14,9 @@ html {
   width: 100%;
   min-height: 100%;
 }
-
+@supports (-webkit-touch-callout: inherit) {
+  background-attachment: scroll;
+}
 .header-wrapper {
   background: var(--light-color);
   padding-bottom: 30px;
@@ -74,7 +76,7 @@ html {
     hsla(331, 30%, 74%, 0.9),
     hsla(27, 77%, 51%, 0.6)),
     url("../image/esvedra.jpg") no-repeat center center;
-  background-attachment: relative;
+  background-attachment: fixed;
   background-size: cover;
 }
 
